match page  design issue fixed. scrollbar changed.

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,37 @@
-html, body, #root
-{
-    min-height: 100vh;
+html,
+body,
+#root {
+  min-height: 100vh;
+  max-width: 100vw;
 }
 
+/* *::-webkit-scrollbar {
+  width: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(
+    linear,
+    0% 100%,
+    0% 0%,
+    color-stop(0.44, rgb(254, 195, 62)),
+    color-stop(0.5, rgb(239, 168, 40)),
+    color-stop(0.86, rgb(239, 168, 40))
+  );
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-track {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px inset;
+  background: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+} */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
